assignment_0 - got the toml file to work

--- a/assignments/pyproject.toml
+++ b/assignments/pyproject.toml
@@ -1,13 +1,26 @@
 [project]
-readme = "README.md"
-requires-python = ">=3.8"
+name = "life_expectancy"
+version = "0.1.0"
 description = "First assignment of the Foundations Learning Path"
 authors = [
-    {name = "Fernando Cordeiro<fernando@daredata.engineering>"}
+    {name = "Fernando Cordeiro<fernando@daredata.engineering>"},
+    {name = "Rita Centeno<ritafalcaocenteno@gmail.com>"}
 ]
+dependencies = ["pandas"]
+
+readme = "README.md"
+requires-python = ">=3.8"
+
 
 [project.optional-dependencies]
 dev = ["pytest", "pylint", "pytest-cov", "toml"]
+
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+packages = ["life_expectancy"]
 
 [tool.coverage.run]
 omit = [
