--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install --upgrade setuptools
         python -m pip install pandas pylint pytest
+        cd assignments
         python -m pip install '.[dev]'
     - name: Lint with pylint
       run: |
